# segregator

./: .travis.yml  CMakeLists.txt  README.md  doxconfig  package.xml  travis.yml
docs/html/: CMakeLists_8txt.html  Detection_8cpp.html  Detection_8cpp__incl.map  Detection_8cpp__incl.md5  Detection_8hpp.html  Detection_8hpp__dep__incl.map  Detection_8hpp__dep__incl.md5  Detection_8hpp__incl.map  Detection_8hpp__incl.md5  Detection_8hpp_source.html  Gripper_8cpp.html  Gripper_8cpp__incl.map  Gripper_8cpp__incl.md5  Gripper_8hpp.html  Gripper_8hpp__dep__incl.map  Gripper_8hpp__dep__incl.md5  Gripper_8hpp__incl.map  Gripper_8hpp__incl.md5  Gripper_8hpp_source.html  KukaKinematics_8cpp.html  KukaKinematics_8cpp__incl.map  KukaKinematics_8cpp__incl.md5  KukaKinematics_8hpp.html  KukaKinematics_8hpp__dep__incl.map  KukaKinematics_8hpp__dep__incl.md5  KukaKinematics_8hpp__incl.map  KukaKinematics_8hpp__incl.md5  KukaKinematics_8hpp_source.html  README_8md.html  annotated.html  classDetection-members.html  classDetection.html  classKukaGripper-members.html  classKukaGripper.html  classKukaKinematics-members.html  classKukaKinematics.html  classes.html  cppcheck_8txt.html  cpplint_8txt.html  dir_000002_000000.html  (+31 more)
docs/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
docs/latex/: Detection_8cpp.tex  Detection_8cpp__incl.md5  Detection_8hpp.tex  Detection_8hpp__dep__incl.md5  Detection_8hpp__incl.md5  Gripper_8cpp.tex  Gripper_8cpp__incl.md5  Gripper_8hpp.tex  Gripper_8hpp__dep__incl.md5  Gripper_8hpp__incl.md5  KukaKinematics_8cpp.tex  KukaKinematics_8cpp__incl.md5  KukaKinematics_8hpp.tex  KukaKinematics_8hpp__dep__incl.md5  KukaKinematics_8hpp__incl.md5  annotated.tex  classDetection.tex  classKukaGripper.tex  classKukaKinematics.tex  cpplint_8txt.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_e4748622987d58749b151d7cbc622429.tex  files.tex  md_README.tex  refman.tex  src_2main_8cpp.tex  src_2main_8cpp__incl.md5  testDetection_8cpp.tex  testDetection_8cpp__incl.md5  testGripper_8cpp.tex  testGripper_8cpp__incl.md5  testKukaKinematics_8cpp.tex  testKukaKinematics_8cpp__incl.md5  test_2main_8cpp.tex
include/plugins/: CameraPlugin.hpp
include/segregator/: Detection.hpp  Gripper.hpp  KukaKinematics.hpp
launch/: kuka_fwd.launch  segregator.launch
results/: cppcheck.txt  cpplint.txt
src/: CameraPlugin.cpp  Detection.cpp  Gripper.cpp  KukaKinematics.cpp  kuka_execute.cpp  main.cpp
test/: allTests.test  main.cpp  testDetection.cpp  testGripper.cpp  testKukaKinematics.cpp
worlds/: BB  BR  GB  RB  RG  RR  YG  world.world
